fixed 8080 server whitelabel error

--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,10 @@
         </dependency>
         <!-- Springdoc OpenAPI -->
         <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.14</version>
-        </dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.5.0</version>
+   </dependency>
     </dependencies>
     <build>
         <plugins>
